--- a/copywrite-frontend/package.json
+++ b/copywrite-frontend/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.2.5",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "standard": "^17.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
