--- a/copywrite-api/package.json
+++ b/copywrite-api/package.json
@@ -19,5 +19,8 @@
     "mocha": "^10.0.0",
     "standard": "^17.0.0",
     "supertest": "^6.2.4"
+  },
+  "eslintConfig": {
+    "extends":"./node_modules/standard/eslintrc.json"
   }
 }
