--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "3001:3001"
 
   ##############################
-  # Frontend Container
+  # Frontend Container ##
   ##############################
   front-container:
     build:
