--- a/copywrite-frontend/dockerfile
+++ b/copywrite-frontend/dockerfile
@@ -16,7 +16,21 @@ RUN npm run build
 
 ########################################################################
 #CREATE NGINX SERVER
-FROM nginx:1.19.0-alpine as prod-stage
-COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
+#pull the official nginx:1.19.0 base image
+FROM nginx:1.19.0
+#copies React to the container directory
+# Set working directory to nginx resources directory
+WORKDIR /usr/share/nginx/html
+# Remove default nginx static resources
+RUN rm -rf ./*
+# Copies static resources from builder stage
+COPY --from=build /app/dist .
+WORKDIR /app
+RUN rm /etc/nginx/conf.d/default.conf
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+# Containers run nginx with global directives and daemon off
 CMD ["nginx", "-g", "daemon off;"]
+
+##para heroku
+
+##CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
